# tg-bot

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.codex/environments/: environment.toml
migrations/: 001_company_details.sql  002_applications.sql  003_application_party_snapshots.sql  004_audit_events.sql  005_cargos_client_forwarder.sql  006_rating_and_claims.sql  007_cargo_notified_at.sql
src/admin/: auth.py  routes.py
src/admin/templates/: base.html  cargos.html  dashboard.html  feedback.html  login.html  reports.html  user_detail.html  users.html
src/api/: routes.py
src/bot/: bot.py  keyboards.py  states.py  states.pyfrom aiogram.fsm.state import State, StatesGroup  utils.py
src/bot/handlers/: admin.py  analytics.py  antifraud.py  cargo.py  chat.py  claims.py  errors.py  feedback.py  geolocation.py  inline.py  legal.py  onboarding.py  profile.py  rating.py  reminder.py  search.py  start.py  verification.py
src/bot/middlewares/: logging.py  watchdog.py
src/bot/utils/: cities.py
src/core/: ai.py  audit.py  cities.py  config.py  database.py  documents.py  logger.py  market_data.py  models.py  redis.py  russia_cities.txt  scheduler.py  snapshots.py
src/core/renderers/: application_a.py  application_b.py
src/core/services/: applications.py  legal_check.py  notifications.py  rating.py  watchdog.py
src/core/templates/: application_a.txt  application_b.txt
src/webapp/: auth.py  routes.py
src/webapp/templates/: index.html
